--- a/src/components/main/result/Today/TodayMainInfo.module.css
+++ b/src/components/main/result/Today/TodayMainInfo.module.css
@@ -6,9 +6,10 @@
     border-radius: 20px;
     background-image: url("../../../../assets/bg-today-small.svg");
     background-repeat: no-repeat;
-    width: 100%;
     padding: calc(24rem/16);
     gap: calc(16rem/16);
+    background-size: cover;
+    width: 100%;
 }
 
 .main_info {
@@ -54,3 +55,23 @@
     color: var( --color_7);
 }
 
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+
+@media (min-width: 768px) {
+    .today_temp_container {
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        background-image: url("../../../../assets/bg-today-large.svg");
+        padding: calc(80rem/16) calc(24rem/16);
+        gap: calc(16rem/16);
+    }
+
+    .temperature {
+        width: auto;
+    }
+
+
+}
+
+@media (min-width: 1440px) {}
