--- a/src/components/header/Navigation.module.css
+++ b/src/components/header/Navigation.module.css
@@ -5,3 +5,11 @@
     align-items: center;
     width: 100%;
 }
+
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+
+@media (min-width: 768px) {
+
+}
+
+@media (min-width: 1440px) {}
