--- a/src/components/main/result/DailyForecast/DailyForecast.module.css
+++ b/src/components/main/result/DailyForecast/DailyForecast.module.css
@@ -17,3 +17,21 @@
     flex-wrap: wrap;
     gap: calc(16rem/16)
 }
+
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+
+@media (min-width: 768px) {
+    .daily_forecast_container {
+        width: 100%;
+    }
+    .daily_forecast_boxes {
+        width: 100%;
+    }
+    .daily_forecast_boxes {
+        justify-content: center;
+        align-items: center;
+        gap: calc(16rem/16)
+    }
+}
+
+@media (min-width: 1440px) {}
