--- a/src/components/main/result/Today/Today.module.css
+++ b/src/components/main/result/Today/Today.module.css
@@ -6,3 +6,9 @@
     width: 100%;
     gap: calc(20rem/16)
 }
+
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+
+@media (min-width: 768px) {}
+
+@media (min-width: 1440px) {}
