--- a/src/components/main/result/Today/TodayWeatherInfo.module.css
+++ b/src/components/main/result/Today/TodayWeatherInfo.module.css
@@ -7,3 +7,9 @@
     justify-content: center;
     align-items: center;
 }
+
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+
+@media (min-width: 768px) {}
+
+@media (min-width: 1440px) {}
