--- a/src/components/main/result/Today/TodayWeatherInfoBox.module.css
+++ b/src/components/main/result/Today/TodayWeatherInfoBox.module.css
@@ -21,3 +21,13 @@
     line-height: 120%;
     color: var(--color_7)
 }
+
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+
+@media (min-width: 768px) {
+    .today_weather_info_box_container {
+        width: 23%;
+    }
+}
+
+@media (min-width: 1440px) {}
