--- a/src/components/main/result/Today/TodayMainInfo.module.css
+++ b/src/components/main/result/Today/TodayMainInfo.module.css
@@ -19,8 +19,8 @@
     justify-content: center;
     gap: calc(12rem/16);
 }
-.main_info_localisation {}
-.main_info_localisation_text {
+.main_info_localization {}
+.main_info_localization_text {
     font-size: calc(28rem/16);
     font-weight: bold;
     line-height: 120%;
