--- a/src/App.css
+++ b/src/App.css
@@ -3,16 +3,18 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: calc(16rem/16);
-  gap: calc(48rem/16);
+  padding: calc(16rem / 16);
+  gap: calc(48rem / 16);
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
 @media (min-width: 768px) {
   .container {
-    padding: calc(24rem/16);
+    padding: calc(24rem / 16);
   }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
