--- a/src/components/common/logo/Logo.module.css
+++ b/src/components/common/logo/Logo.module.css
@@ -1,16 +1,19 @@
-.logo_container {}
+.logo_container {
+}
 .logo_svg {
-    width: calc(137rem/16);
-    height: calc(28rem/16);
+  width: calc(137rem / 16);
+  height: calc(28rem / 16);
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
 @media (min-width: 768px) {
-    .logo_svg {
-        width: calc(200rem/16);
-        height: calc(40rem/16);
-    }
+  .logo_svg {
+    width: calc(200rem / 16);
+    height: calc(40rem / 16);
+  }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
