--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,28 +1,29 @@
 .header_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    gap: calc(48rem/16)
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  gap: calc(48rem / 16);
 }
 
 .header_title_text {
-    font-family: "Bricolage Grotesque", sans-serif;
-    font-size: calc(52rem/16);
-    line-height: 120%;
-    font-weight: bold;
-    color: var(--color_7);
-    text-align: center;
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-size: calc(52rem / 16);
+  line-height: 120%;
+  font-weight: bold;
+  color: var(--color_7);
+  text-align: center;
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
 @media (min-width: 768px) {
-    .header_title {
-        max-width: calc(482rem/16);
-    }
-
+  .header_title {
+    max-width: calc(482rem / 16);
+  }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
