--- a/src/components/header/Navigation.module.css
+++ b/src/components/header/Navigation.module.css
@@ -1,15 +1,16 @@
 .navigation_container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
 @media (min-width: 768px) {
-
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
