--- a/src/components/header/menu/Menu.module.css
+++ b/src/components/header/menu/Menu.module.css
@@ -1,54 +1,53 @@
 .menu_container {
-    position: relative;
-
+  position: relative;
 }
 
 .menu_button {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    gap: calc(6rem / 16);
-    width: calc(89rem / 16);
-    height: calc(33rem / 16);
-    background-color: var(--color_2);
-    border: 0;
-    border-radius: 6px;
-    padding: calc(8rem / 16) calc(10rem / 16);
-    cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  gap: calc(6rem / 16);
+  width: calc(89rem / 16);
+  height: calc(33rem / 16);
+  background-color: var(--color_2);
+  border: 0;
+  border-radius: 6px;
+  padding: calc(8rem / 16) calc(10rem / 16);
+  cursor: pointer;
 }
 
 .menu_icon {
-    width: calc(14rem / 16);
-    height: calc(14rem / 16);
+  width: calc(14rem / 16);
+  height: calc(14rem / 16);
 }
 
 .menu_text {
-    font-size: calc(14rem / 16);
-    line-height: 120%;
-    color: var(--color_7);
+  font-size: calc(14rem / 16);
+  line-height: 120%;
+  color: var(--color_7);
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
 @media (min-width: 768px) {
-    .menu_button {
-        gap: calc(6rem / 16);
-        width: calc(119rem / 16);
-        height: calc(43rem / 16);
-        border-radius: 8px;
-        padding: calc(12rem / 16) calc(16rem / 16);
-    }
+  .menu_button {
+    gap: calc(6rem / 16);
+    width: calc(119rem / 16);
+    height: calc(43rem / 16);
+    border-radius: 8px;
+    padding: calc(12rem / 16) calc(16rem / 16);
+  }
 
-    .menu_icon {
-        width: calc(16rem / 16);
-        height: calc(16rem / 16);
-    }
-    .menu_text {
-        font-size: calc(16rem / 16);
-    }
-
-
+  .menu_icon {
+    width: calc(16rem / 16);
+    height: calc(16rem / 16);
+  }
+  .menu_text {
+    font-size: calc(16rem / 16);
+  }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
