--- a/src/components/main/Main.module.css
+++ b/src/components/main/Main.module.css
@@ -1,18 +1,20 @@
 .main_container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    gap: calc(32rem/16);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  gap: calc(32rem / 16);
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
 @media (min-width: 768px) {
-    .main_container {
-        gap: calc(48rem/16);
-    }
+  .main_container {
+    gap: calc(48rem / 16);
+  }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
