--- a/src/components/main/result/DailyForecast/DailyForecast.module.css
+++ b/src/components/main/result/DailyForecast/DailyForecast.module.css
@@ -1,37 +1,39 @@
 .daily_forecast_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: calc(20rem/16)
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: calc(20rem / 16);
 }
 .daily_forecast_header_text {
-    font-size: calc(20rem/16);
-    font-weight: 600;
-    color: var(--color_7);
-    line-height: 120%;
+  font-size: calc(20rem / 16);
+  font-weight: 600;
+  color: var(--color_7);
+  line-height: 120%;
 }
 .daily_forecast_boxes {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: calc(16rem/16)
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: calc(16rem / 16);
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
 @media (min-width: 768px) {
-    .daily_forecast_container {
-        width: 100%;
-    }
-    .daily_forecast_boxes {
-        width: 100%;
-    }
-    .daily_forecast_boxes {
-        justify-content: center;
-        align-items: center;
-        gap: calc(16rem/16)
-    }
+  .daily_forecast_container {
+    width: 100%;
+  }
+  .daily_forecast_boxes {
+    width: 100%;
+  }
+  .daily_forecast_boxes {
+    justify-content: center;
+    align-items: center;
+    gap: calc(16rem / 16);
+  }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
