--- a/src/components/main/result/DailyForecast/DailyForecastBox.module.css
+++ b/src/components/main/result/DailyForecast/DailyForecastBox.module.css
@@ -1,4 +1,45 @@
 .daily_forecast_box_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: var(--color_3);
+  border: 1px solid var(--color_4);
+  border-radius: 12px;
+  width: 30%;
+  padding: calc(10rem / 16) calc(16rem / 16);
+}
+.daily_forecast_box_day {
+  color: var(--color_6);
+  font-size: calc(16rem / 16);
+  font-weight: 500;
+  line-height: 120%;
+}
+.daily_forecast_box_precipitation {
+}
+.icon_svg {
+  width: calc(60rem / 16);
+  height: calc(60rem / 16);
+}
+.daily_forecast_box_temp {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+.daily_forecast_box_temp_minmax {
+  color: var(--color_6);
+  font-size: calc(16rem / 16);
+  font-weight: 500;
+  line-height: 120%;
+}
+
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
+
+@media (min-width: 768px) {
+  .daily_forecast_box_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -6,50 +47,10 @@
     background: var(--color_3);
     border: 1px solid var(--color_4);
     border-radius: 12px;
-    width: 30%;
+    width: 12.5%;
     padding: calc(10rem / 16) calc(16rem / 16);
-
-}
-.daily_forecast_box_day {
-    color : var(--color_6);
-    font-size: calc(16rem/16);
-    font-weight: 500;
-    line-height: 120%;
-}
-.daily_forecast_box_precipitation{}
-.icon_svg {
-    width: calc(60rem/16);
-    height: calc(60rem/16);
-}
-.daily_forecast_box_temp {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%
-}
-.daily_forecast_box_temp_minmax {
-    color : var(--color_6);
-    font-size: calc(16rem/16);
-    font-weight: 500;
-    line-height: 120%;
+  }
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
-
-@media (min-width: 768px) {
-    .daily_forecast_box_container {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: var(--color_3);
-        border: 1px solid var(--color_4);
-        border-radius: 12px;
-        width: 12.5%;
-        padding: calc(10rem / 16) calc(16rem / 16);
-
-    }
+@media (min-width: 1440px) {
 }
-
-@media (min-width: 1440px) {}
