--- a/src/components/main/result/Today/Today.module.css
+++ b/src/components/main/result/Today/Today.module.css
@@ -1,14 +1,17 @@
 .today_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    gap: calc(20rem/16)
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: calc(20rem / 16);
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+}
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
