--- a/src/components/main/result/Today/TodayMainInfo.module.css
+++ b/src/components/main/result/Today/TodayMainInfo.module.css
@@ -1,77 +1,80 @@
 .today_temp_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-between;
-    border-radius: 20px;
-    background-image: url("../../../../assets/bg-today-small.svg");
-    background-repeat: no-repeat;
-    padding: calc(24rem/16);
-    gap: calc(16rem/16);
-    background-size: cover;
-    width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 20px;
+  background-image: url("../../../../assets/bg-today-small.svg");
+  background-repeat: no-repeat;
+  padding: calc(24rem / 16);
+  gap: calc(16rem / 16);
+  background-size: cover;
+  width: 100%;
 }
 
 .main_info {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: calc(12rem/16);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: calc(12rem / 16);
 }
-.main_info_localization {}
+.main_info_localization {
+}
 .main_info_localization_text {
-    font-size: calc(28rem/16);
-    font-weight: bold;
-    line-height: 120%;
-    color: var( --color_7);
+  font-size: calc(28rem / 16);
+  font-weight: bold;
+  line-height: 120%;
+  color: var(--color_7);
 }
-.main_info_date {}
+.main_info_date {
+}
 .main_info_date_text {
-    font-size: calc(18rem/16);
-    line-height: 120%;
-    color: var( --color_7);
+  font-size: calc(18rem / 16);
+  line-height: 120%;
+  color: var(--color_7);
 }
 .temperature {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    gap: calc(10rem/16);
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: calc(10rem / 16);
 }
-.temperature_icon {}
-.icon_svg{
-    width: calc(120rem/16);
-    height: calc(120rem/16)
+.temperature_icon {
+}
+.icon_svg {
+  width: calc(120rem / 16);
+  height: calc(120rem / 16);
 }
 .temperature_info {
 }
 .temperature_info_text {
-    font-size: calc(70rem/16);
-    font-weight: 600;
-    line-height: 100%;
-    letter-spacing: -2px;
-    color: var( --color_7);
+  font-size: calc(70rem / 16);
+  font-weight: 600;
+  line-height: 100%;
+  letter-spacing: -2px;
+  color: var(--color_7);
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
 @media (min-width: 768px) {
-    .today_temp_container {
-        flex-direction: row;
-        align-items: center;
-        justify-content: space-between;
-        background-image: url("../../../../assets/bg-today-large.svg");
-        padding: calc(80rem/16) calc(24rem/16);
-        gap: calc(16rem/16);
-    }
+  .today_temp_container {
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    background-image: url("../../../../assets/bg-today-large.svg");
+    padding: calc(80rem / 16) calc(24rem / 16);
+    gap: calc(16rem / 16);
+  }
 
-    .temperature {
-        width: auto;
-    }
-
-
+  .temperature {
+    width: auto;
+  }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
