--- a/src/components/main/result/Today/TodayWeatherInfo.module.css
+++ b/src/components/main/result/Today/TodayWeatherInfo.module.css
@@ -1,15 +1,18 @@
 .today_weather_info_container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 16px;
-    width: 100%;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 16px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+}
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
