--- a/src/components/main/result/Today/TodayWeatherInfoBox.module.css
+++ b/src/components/main/result/Today/TodayWeatherInfoBox.module.css
@@ -1,33 +1,35 @@
 .today_weather_info_box_container {
-    display: flex;
-    flex-direction: column;
-    gap: calc(24rem / 16);
-    background: var(--color_2);
-    border: 1px solid var(--color_4);
-    border-radius: 12px;
-    padding: calc(20rem/16);
-    width: 47%;
+  display: flex;
+  flex-direction: column;
+  gap: calc(24rem / 16);
+  background: var(--color_2);
+  border: 1px solid var(--color_4);
+  border-radius: 12px;
+  padding: calc(20rem / 16);
+  width: 47%;
 }
 
 .box_header_text {
-    font-size: calc(18rem / 16);
-    line-height: 120%;
-    color: var(--color_7);
-    font-weight: 300;
+  font-size: calc(18rem / 16);
+  line-height: 120%;
+  color: var(--color_7);
+  font-weight: 300;
 }
 
 .box_result_text {
-    font-size: calc(25rem/16);
-    line-height: 120%;
-    color: var(--color_7)
+  font-size: calc(25rem / 16);
+  line-height: 120%;
+  color: var(--color_7);
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
 @media (min-width: 768px) {
-    .today_weather_info_box_container {
-        width: 23%;
-    }
+  .today_weather_info_box_container {
+    width: 23%;
+  }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
