--- a/src/components/main/search/Search.module.css
+++ b/src/components/main/search/Search.module.css
@@ -1,56 +1,58 @@
 .search_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    gap: calc(12rem/16);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: calc(12rem / 16);
 }
 
 .search_typing {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-    gap: calc(16rem/16);
-    background: var(--color_2);
-    width: 100%;
-    padding: calc(16rem/16) calc(24rem/16);
-    border: 0;
-    border-radius: 12px;
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+  gap: calc(16rem / 16);
+  background: var(--color_2);
+  width: 100%;
+  padding: calc(16rem / 16) calc(24rem / 16);
+  border: 0;
+  border-radius: 12px;
 }
 
 .search_icon {
-    width: calc(20rem/16);
-    height: calc(20rem/16);
-    fill: var(--color_6);
+  width: calc(20rem / 16);
+  height: calc(20rem / 16);
+  fill: var(--color_6);
 }
 
 .search_input {
-    background: var(--color_2);
-    font-size: calc(20rem/16);
-    line-height: 120%;
-    border: none;
-    color: var(--color_6);
-    width: 100%;
+  background: var(--color_2);
+  font-size: calc(20rem / 16);
+  line-height: 120%;
+  border: none;
+  color: var(--color_6);
+  width: 100%;
 }
 
 .search_input:focus {
-    outline: none;
-    border: none;
+  outline: none;
+  border: none;
 }
 
-@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {}
+@media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
+}
 
 @media (min-width: 768px) {
-    .search_container {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        width: 100%;
-        gap: calc(12rem/16);
-    }
+  .search_container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    gap: calc(12rem / 16);
+  }
 }
 
-@media (min-width: 1440px) {}
+@media (min-width: 1440px) {
+}
