--- a/src/index.css
+++ b/src/index.css
@@ -19,29 +19,25 @@
   --color_9: hsl(233, 67%, 56%);
   /*Blue 700*/
   --color_10: hsl(248, 70%, 36%);
-    /*Black*/
-    --color_11: hsl(0, 0%, 0%);
-    --color_11_transparent: hsla(0, 0%, 0%, 0.25);
+  /*Black*/
+  --color_11: hsl(0, 0%, 0%);
+  --color_11_transparent: hsla(0, 0%, 0%, 0.25);
 }
 
 .dm-sans {
-            font-family: "DM Sans", sans-serif;
-            font-optical-sizing: auto;
-            font-style: normal;
-          }
-
-.bricolage-grotesque {
-                        font-family: "Bricolage Grotesque", sans-serif;
-                        font-optical-sizing: auto;
-                        font-style: normal;
-                        font-variation-settings:
-                                "wdth" 100;
-                      }
-
-body {
-background: var(--color_1);
   font-family: "DM Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
+.bricolage-grotesque {
+  font-family: "Bricolage Grotesque", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+}
 
-
+body {
+  background: var(--color_1);
+  font-family: "DM Sans", sans-serif;
+}
