--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,10 @@
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -17,4 +24,7 @@
 }
 
 @media (min-width: 1440px) {
+  .container {
+    max-width: 1200px;
+  }
 }
