--- a/src/components/main/result/Result.module.css
+++ b/src/components/main/result/Result.module.css
@@ -7,6 +7,23 @@
   gap: calc(32rem / 16);
 }
 
+.result_container_first {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  gap: calc(32rem / 16);
+}
+
+.result_container_second {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
 @media (orientation: landscape) and (min-width: 320px) and (max-width: 767px) {
 }
 
@@ -14,4 +31,20 @@
 }
 
 @media (min-width: 1440px) {
+  .result_container {
+    display: flex;
+    flex-direction: row;
+    align-items: start;
+    justify-content: center;
+    width: 100%;
+    gap: 2%;
+  }
+  .result_container_first {
+    width: 65%;
+  }
+  .result_container_second {
+    width: 33%;
+    margin: unset;
+  }
+
 }
